feat: Add reset password user controller
