# docs/swagger.json
@@ -141,6 +141,52 @@
                     }
                 }
             }
+        },
+        "/api/v1/users/password/reset": {
+            "post": {
+                "description": "비밀번호 재설정",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Reset password",
+                "parameters": [
+                    {
+                        "description": "ResetPasswordRequest Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.ResetPasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/v1.ResetPasswordResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -186,6 +232,27 @@
                     "type": "string"
                 }
             }
+        },
+        "v1.ResetPasswordRequest": {
+            "type": "object",
+            "required": [
+                "flow_id",
+                "password"
+            ],
+            "properties": {
+                "flow_id": {
+                    "type": "string",
+                    "example": "cc833698-4519-4873-b9b4-67d6fef70dcb:1717170088"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8,
+                    "example": "password123"
+                }
+            }
+        },
+        "v1.ResetPasswordResponse": {
+            "type": "object"
         },
         "v1.SendPasswordRecoveryEmailRequest": {
             "type": "object",
