# internal/controller/http/v1/types.go
@@ -26,3 +26,10 @@ type SendPasswordRecoveryEmailRequest struct {
 }
 
 type SendPasswordRecoveryEmailResponse struct{}
+
+type ResetPasswordRequest struct {
+	Password string `json:"password" binding:"required,min=8" example:"password123"`
+	FlowID   string `json:"flow_id" binding:"required" example:"cc833698-4519-4873-b9b4-67d6fef70dcb:1717170088"`
+}
+
+type ResetPasswordResponse struct{}
